# AI-Code-Agent

./: .env.example  .gitignore  PROGRESS_NOTES.md  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
examples/: example_usage.py
plugins/: sample_plugins.py
src/: cli.py
src/agents/: agent_coordinator.py  bug_detector.py  code_generator.py  code_reviewer.py  test_generator.py
src/analytics/: __init__.py  insights_engine.py  ml_models.py  reporting.py
src/analyzers/: static_analyzer.py
src/api/: dashboard.py  main.py  webhooks.py
src/distributed/: __init__.py  task_queue.py
src/integrations/: cicd_integration.py  github_integration.py  gitlab_integration.py  repository_workflows.py
src/llm/: model_interface.py  multi_model_manager.py  prompt_manager.py
src/performance/: cache_manager.py  optimizer.py
src/plugins/: __init__.py  plugin_interface.py  plugin_manager.py
src/security/: auth_manager.py
tests/: conftest.py  test_auth_manager.py  test_cache_manager.py  test_code_reviewer.py  test_insights_engine.py  test_ml_models.py  test_multi_model_manager.py  test_performance_optimizer.py  test_plugin_manager.py  test_static_analyzer.py  test_task_queue.py
